# SDL-CMake-Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Constants.hpp
src/: CMakeLists.txt  Main.cpp
